part_2/2_0_7/ping-pong-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
      - name: ping-pong-app
        image: bronepeace/ping-pong-app:2_0_7
