part_2/2_0_7/ping-pong-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-app-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
  - port: 2346
    protocol: TCP
    targetPort: 5000
