part_2/2_0_7/ping-pong-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-app-ingress
spec:
  rules:
  -  http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-app-svc
            port: 
              number: 2346
